<resources>
    <string name="app_name">Dwealth</string>
    <string name="facebook_app_id">307748929942516</string>
    <string name="fb_login_protocol_scheme">fb307748929942516</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">Loading...</string>
    <string name="logo">LOGO</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password ?</string>
    <string name="or_login_via">or login via</string>
    <string name="login_fb">Login using facebook</string>
    <string name="login_google">Login using google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="always_on">Always On</string>
    <string name="activate_this">Activate this option to prevent phone from turning the screen off while app running</string>
    <string name="app_version">App Version</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="how_would_you_choose_stock_you_portfolio">How would you choose stock you portfolio?</string>
    <string name="what_does_the_sebi_do">What does the SEBI do?</string>
    <string name="from_where_do_i_buy_stocks">From where do i buy stocks?</string>
    <string name="faq_text_1">With so many options available, picking the right stock for your portfolio can be a challenge. The basic rule while buying stock is to keep your financial goals in mind. Some may look for growth, while some may look for dividend income. The next logical step is to counduct a stock research. Look at the company\'s income statement, cash flow statement,balance sheet, management\'s future plans,debt figures, etc. Once you\'ve accumulated the facts, analyse the data.</string>
    <string name="faq_text_2">The Securities and Exchange Board of India (SEBI) is the regulator for the securities market in India.The investment market needs to be regulated by rules for smooth trading.SEBI ensures the smooth functioning oth the stock market and protects the interests of investors,issuers and intermediaries like stockbrokers.</string>
    <string name="faq_text_3">You can buy stocks either through a brokers\'s online platform or directly from a company through driect stock purchase plans (DSPP), though fewcompieanies have the option of DSPPs. An investor can open an account by depositing eith age account.</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="request_type">Request Type</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="contact_us">Contact Us</string>

    <!--Questionarry  Strings-->
    <string name="startegy">Select Strategy Plan</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="question1">I plan to begin withdrawing money from my investments in </string>
    <string name="ques_1_opt_1">Less than 3 years</string>
    <string name="ques_1_opt_2">3–5 years</string>
    <string name="ques_1_opt_3">6–10 years</string>
    <string name="ques_1_opt_4">11 years or more</string>

    <string name="question2">Once I begin withdrawing funds from my Investments, I plan to spend all of the funds in </string>
    <string name="ques_2_opt_1">Less than 2 years</string>
    <string name="ques_2_opt_2">2–5 years</string>
    <string name="ques_2_opt_3">6–10 years</string>
    <string name="ques_2_opt_4">11 years or more</string>

    <string name="question3">I would describe my knowledge of investment as </string>
    <string name="ques_3_opt_1">None</string>
    <string name="ques_3_opt_2">Limited</string>
    <string name="ques_3_opt_3">Good</string>
    <string name="ques_3_opt_4">Extensive</string>

    <string name="question4">When I invest my money, I am </string>
    <string name="ques_4_opt_1">Most convered about my investment losing value</string>
    <string name="ques_4_opt_2">Equally concerned about my investment losing or gaing value</string>
    <string name="ques_4_opt_3">Most concerned about my investment gaining values</string>
    <string name="ques_4_opt_4">Buy more shares</string>

    <string name="question5">Select the investments you currently own or have ownded in the past with the highest number of points </string>
    <string name="ques_5_opt_1">Money market funds or cash investments </string>
    <string name="ques_5_opt_2">Bonds and/or bond funds</string>
    <string name="ques_5_opt_3">Stock and/or funds</string>
    <string name="ques_5_opt_4">International securities and/or international funds</string>


    <string name="question6">Select the investments you currently own or have ownded in the past with the highest number of points </string>
    <string name="ques_6_opt_1">See all of my shares</string>
    <string name="ques_6_opt_2">Sell some of my shares</string>
    <string name="ques_6_opt_3">Do nothing</string>
    <string name="ques_6_opt_4">Buy more shares</string>

    <string name="question7">Review the chart below \n We\'ve outlined hte most likely best-and worst-case annual returns offive hypothetical investment plans. Which range of possibleoutcome is most acceptable to you? \n The figures are hypothetical and do not represent the performance of any particular investment.</string>
    <string name="ques_7_opt_1">A</string>
    <string name="ques_7_opt_2">B</string>
    <string name="ques_7_opt_3">C</string>
    <string name="ques_7_opt_4">D</string>
    <string name="ques_7_opt_5">E</string>

    <string-array name="nav_item">
        <item>Home</item>
        <item>Profile</item>
        <item>Transaction History</item>
        <item>Document Center</item>
        <item>Setting</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="language_array">
        <item>English</item>
        <item>Spanish</item>
        <item>Hindi</item>
        <item>Arabic</item>

    </string-array>
    <string name="last_name">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="update">Update</string>
    <string name="payment_method">Payment Method</string>
    <string name="title_activity_tax_description">TaxDescriptionActivity</string>
    <string name="title_activity_transaction_history">TransactionHistoryActivity</string>
    <string name="download_pdf">Download PDF</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="genrate_statement">Genrate Statement</string>
    <string name="tax_desc">Tax Description</string>
    <string name="show_transaction">Show transaction</string>
    <string name="transaction_history">Transaction History</string>
    <string name="net_amount">Net Amount</string>
    <string name="rate">Rate</string>
    <string name="stocks">Stocks</string>
    <string name="date">Date</string>
    <string name="account_info">Account Information</string>
    <string name="buy_sell">Buy / Sell</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="indivisual_sequrety">Indivisual Security</string>
    <string name="faq">FAQs</string>
    <string name="select_lang">Select Language</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="search">Search...</string>
    <string name="conservative">Conservative</string>
    <string name="moderate">Moderate Allocation</string>
    <string name="aggressive">Moderately Aggressive</string>
    <string name="moderately">Moderately Conservative</string>
    <string name="aggressive_allocation">Aggressive Allocation</string>
    <string name="empty_username">Please enter user name.</string>
    <string name="empty_phone">Please enter phone number.</string>
    <string name="empty_email">Please enter Email-ID.</string>
    <string name="valid_email">Please enter valid email Id.</string>
    <string name="empty_password">Please enter password.</string>
</resources>
