<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.activity.faq.FaqActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAskQuestion"
        android:layout_below="@+id/appBarLayout"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_sixteen"
            android:layout_marginTop="@dimen/dp_sixteen"
            android:layout_marginRight="@dimen/dp_sixteen"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_would_you_choose_stock_you_portfolio"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_sixteen" />
            <TextView
                android:layout_marginTop="@dimen/dp_four"
                android:textColor="@android:color/white"
                android:text="@string/faq_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_does_the_sebi_do"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_sixteen" />
            <TextView
                android:layout_marginTop="@dimen/dp_four"
                android:textColor="@android:color/white"
                android:text="@string/faq_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_where_do_i_buy_stocks"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_sixteen" />
            <TextView
                android:layout_marginTop="@dimen/dp_four"
                android:textColor="@android:color/white"
                android:text="@string/faq_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonAskQuestion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_fortiy_two"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_sixteen"
        android:background="@drawable/rounded_sky_blue_bg"
        android:text="@string/ask_a_question"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_eighteen" />

</RelativeLayout>