<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".view.activity.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_marginBottom="@dimen/dp_sixteen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_sixteen"
            android:layout_marginRight="@dimen/dp_sixteen"
            android:gravity="center_horizontal|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_one_fiftey_six"
                android:layout_height="@dimen/dp_one_fiftey_six"
                android:layout_centerInParent="true"
                android:src="@drawable/dwealth_logo" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twenty_four"
                android:backgroundTint="@color/colorLightGray"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/dp_eight"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="@dimen/dp_sixteen"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorLightGray" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLightGray"
                android:drawableLeft="@drawable/ic_pnone_no"
                android:drawablePadding="@dimen/dp_eight"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/dp_sixteen"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorLightGray" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLightGray"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/dp_eight"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_sixteen"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorLightGray" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLightGray"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dp_eight"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dp_sixteen"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorLightGray" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_fortiy"
                android:layout_marginTop="@dimen/dp_sixteen"
                android:background="@drawable/login_btn_bg"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_eight"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_marginLeft="@dimen/dp_two"
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>